message WifiEndPoint {
	optional string name = 1;
	required string ssid = 2;
}

message SelectedWifiEndPoint {
	optional WifiEndPoint endPoint = 1;
	optional string password = 2;
}

enum ErrorType {
	TIME_OUT = 0;              // Internal time out, no implemented yet.
	NETWORK_ERROR = 1;         // Network not available or unreachable network.
	DEVICE_ALREADY_PAIRED = 2; // User tries to paired a paired device to another account.
	INTERNAL_DATA_ERROR = 3;   // Data packets corruption during BLE or SPI transfer
	DEVICE_DATABASE_FULL = 4;  // No more space for device pairing.
}

message MorpheusCommand {
	enum CommandType {
	    MORPHEUS_COMMAND_SET_TIME = 0;
	    MORPHEUS_COMMAND_GET_TIME = 1;
	    MORPHEUS_COMMAND_SET_WIFI_ENDPOINT = 2;
	    MORPHEUS_COMMAND_GET_WIFI_ENDPOINT = 3;
	    MORPHEUS_COMMAND_SET_ALARMS = 4;
	    MORPHEUS_COMMAND_GET_ALARMS = 5;
	    MORPHEUS_COMMAND_SWITCH_TO_PAIRING_MODE = 6;
	    MORPHEUS_COMMAND_SWITCH_TO_NORMAL_MODE = 7;
	    MORPHEUS_COMMAND_START_WIFISCAN = 8;
	    MORPHEUS_COMMAND_STOP_WIFISCAN = 9;
	    MORPHEUS_COMMAND_GET_DEVICE_ID = 10;
	    MORPHEUS_COMMAND_EREASE_PAIRED_USER = 11;
	    MORPHEUS_COMMAND_PAIR_PILL = 12;
	    MORPHEUS_COMMAND_ERROR = 13;  // if you receive this, that means something goes wrong.
	}
	required int32 version = 1;
	required CommandType type = 2;
	optional SelectedWifiEndPoint selectedWIFIEndPoint = 3;  // MORPHEUS_COMMAND_SET_WIFI_ENDPOINT, MORPHEUS_COMMAND_GET_WIFI_ENDPOINT
	optional bytes deviceId = 4;
	optional int64 accountId = 5;  // Used by MORPHEUS_COMMAND_PAIRE_PILL
	optional ErrorType error = 6;  // MORPHEUS_COMMAND_ERROR
}